# darwin-meme

./: .gitignore  DEPLOY.md  README.md
.claude/: settings.local.json
backend/: .env.example  config.py  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
backend/agent/: agent.py  decision.py  experiment.py  genome.py
backend/commentator/: narrator.py
backend/darwin_meme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/data/: store.py
backend/evolution/: engine.py  fitness.py  operators.py
backend/integrations/: bitquery.py
backend/market/: bonding_curve.py  events.py  simulator.py  token.py
backend/tests/: test_agent.py  test_bonding_curve.py  test_decision.py  test_events.py  test_evolution.py  test_experiment.py  test_fitness.py  test_genome.py  test_narrator.py  test_operators.py  test_simulator.py  test_token.py
docs/superpowers/plans/: 2026-04-10-darwin-meme.md  2026-04-13-ecosystem-game-view.md
docs/superpowers/specs/: 2026-04-10-darwin-meme-design.md  2026-04-13-ecosystem-game-view-design.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/commentator/: CommentatorView.tsx
frontend/components/evolution/: EvolutionView.tsx  FitnessChart.tsx  GenesDrift.tsx  StrategyScatter.tsx
frontend/components/game/: EcosystemCanvas.tsx  GameHud.tsx  GameView.tsx  entities.ts
frontend/components/genome-lab/: GenomeLab.tsx
frontend/components/landing/: LandingPage.tsx
frontend/hooks/: useSimulation.ts
frontend/lib/: socket.ts  types.ts
(+9 files in other folders)
